--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            <div><a href="#">Privacy Policy</a> | <a href="#">FAQ</a></div>
            <div class="support">
                <img src="./images/mypix.PNG" alt="Professional">
-               <p>Question ? <br> <span class="support-action">Talk to our Professional</span></p>
+               <p>Question ? <br> <span class="support-action">Talk to our <br> Professional</span></p>
            </div>
        </footer>
     </main>
